assets/src/scss/new-identity/style.scss
/* ... */
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-regular);

  a {
    font-family: var(--font-family-heading);
  }
}

.cover-card-heading {
  font-family: var(--font-family-primary);
}

#nav-mobile-menu {
  --nav-link--active--color: var(--grey-900);
}

// Spreadsheet block new color.
table.spreadsheet-table.is-color-gp-green {
  th {
    background-color: var(--table-header-gp-green--background);
  }

  tr {
    background-color: var(--table-even-row-gp-green--background);
  }

  tr:nth-child(odd) {
    background: var(--table-odd-row-gp-green--background);
  }
}

// Table background colors (header, footer, odd/even rows)
.wp-block-table {
  table {
    // GP-Green background
    &.has-gp-green-background-color {
      th {
        background-color: var(--table-header-gp-green--background);
      }

      tr {
        background-color: var(--table-even-row-gp-green--background);
      }

      tfoot td {
        background-color: var(--table-footer-gp-green--background);
      }
    }
  }

  &.is-style-stripes table {
    &.has-gp-green-background-color tr:nth-child(odd) {
      background-color: var(--table-odd-row-gp-green--background);
    }
  }
}

// Body links
.post-content,
.post-content > article,
.page-content {
  p:not(.article-list-item-meta) a,
  > ul li a,
  > ol li a {
    @include shared-link-styles;
  }
}

// Author block/page links
.author-block-info > div a,
.author-details a {
  @include shared-link-styles;
}

// Cookies box links
.cookies-text,
.cookies-settings-details {
  a {
    @include shared-link-styles;
    transition-timing-function: cubic-bezier(0.5, 0, 0, 0.5);
  }
}

// 404 page links
.page-404-page .speech-bubble a {
  @include shared-link-styles;
}

.cookies-settings-header h4 {
  font-family: var(--font-family-paragraph-secondary);
}

// Comments block
.single-comment-meta {
  font-family: var(--headings--font-family);
}

.comments-block .comment-respond button {
  height: 48px;
}

#gdpr-comments-compliance #gdpr-comments-label {
  line-height: var(--line-height-m--font-family-tertiary);
}

// Standalone links
.standalone-link,
.comment-reply-link,
.split-two-column-item-link {
  @include shared-link-styles;

  display: inline-block;
  width: fit-content;
  height: var(--link--height);
  font-weight: var(--font-weight-regular);
  font-family: var(--font-family-primary);
}

.split-two-column-item-link {
  --link--color: var(--white);
  --link--hover--color: var(--white);

  text-shadow: none !important;

  @include x-large-and-up {
    --transition--duration: 0.4s;
    --link--height: 34px;
  }
}

// Colors for transparent buttons.
$palette: (
  "green-400": var(--gp-green-400),
  "green-500": var(--gp-green-500),
  "green-800": var(--gp-green-800),
  "action-yellow": var(--p4-action-yellow-500),
  "dark-green-800": var(--p4-dark-green-800),
  "beige-100": var(--beige-100),
  "blue-green-800": var(--blue-green-800),
  "red-500": var(--red-500),
  "white": var(--white),
  "grey-100": var(--grey-100),
  "grey-200": var(--grey-200),
  "grey-600": var(--grey-600),
  "grey-800": var(--grey-800),
  "grey-900": var(--grey-900),
);

@each $name, $color in $palette {
  .has-#{$name}-color {
    --transparent-button--border-color: #{$color};
    --transparent-button--color: #{$color};
    --transparent-button--hover--background: #{$color};
  }

  .has-#{$name}-background-color {
    --transparent-button--hover--color: #{$color};
    --transparent-button--active--color: #{$color};
  }
}

// Accordion block new color.
.accordion-block.is-style-outline .accordion-content .accordion-headline {
  --accordion-block-outline-style-- {
    border-color: var(--grey-500);
    background: var(--white);
    color: var(--grey-900);

    &:hover {
      background: var(--grey-100);
    }
  }
}

.logged-in-as a {
  color: var(--gp-green-800);

  &:hover,
  &:visited {
    color: var(--gp-green-800);
  }
}

// Gravity Forms
.gfield .gchoice {
  font-family: var(--font-family-paragraph-secondary);
}

.gform_description {
  font-family: var(--font-family-paragraph-secondary);
}

// Take action boxout
.boxout .boxout-excerpt {
  font-family: var(--font-family-paragraph-secondary);
}

// Author block
.author-block-info-name {
  font-family: var(--font-family-paragraph-secondary);
}

.author-block-info div[itemprop="description"],
.author-block-description-button {
  font-family: var(--font-family-paragraph-secondary);
  font-size: var(--font-size-m--font-family-tertiary);
  font-weight: var(--font-weight-regular);
}

// Footer
.footer-menu li {
  font-weight: var(--font-weight-semibold);
  line-height: var(--line-height-m--font-family-tertiary);

  a {
    font-family: var(--font-family-paragraph-secondary);
  }
}

// Post page
.single-post-author {
  font-family: var(--font-family-paragraph-secondary);
}

// Articles
.article-list-item-headline {
  font-family: var(--font-family-heading);
}

